recursion.cons.lessons.recursion.cons.Length.scala.error
length:3: error: 'case' expected but '[' found.
		[]   => 0
                ^length:4: error: '}' expected but ';' found.
		a::b => 1 + length(b)
^length:4: error: not a legal formal parameter
		a::b => 1 + length(b)
                 ^length:8: error: eof expected but '}' found.
 }
 ^