recursion.cons.lessons.recursion.cons.Length.scala.code
def length(list:List[Int]): Int = {
	list match {
		[]   => 0
		a::b => 1 + length(b)
	}
}
